--- a/sql-challenge/03Report.ipynb
+++ b/sql-challenge/03Report.ipynb
@@ -6,6 +6,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "### Note: Add your USERNAME and PASSWORD for postgres in cell 11"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#postgres \n",
     "import psycopg2\n",
     "\n",
@@ -32,7 +41,7 @@
    "source": [
     "# Create Engine\n",
     "\n",
-    "engine = create_engine('postgresql://postgres:postgres@localhost:5432/employees')\n",
+    "engine = create_engine('postgresql://USERNAME:PASSWORD@localhost:5432/employees')\n",
     "   \n",
     "conn = engine.connect()"
    ]
